# adventofcode

./: .gitattributes  README.md
2018/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2021/: .gitignore  Cargo.toml  build.rs
2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2022/: aoc.cabal  package.yaml  stack.yaml
2022/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
2023/: day01.jl  day02.jl  day03.jl  day04.jl  day05.jl  day06.jl  day07.jl  day08.jl  day09.jl  day10.jl  day11.jl
2024/: day01.zig  day02.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  day08.zig  day09.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.zig  day17.zig  day18.zig  day19.zig  day20.zig  day21.zig  day22.zig
