name:                aoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc#readme
build-type:          Simple
cabal-version:       >=1.10

executable aoc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Day1
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
